docs: restructured documentation and updated configuration for secrets management

--- a/.env.example
+++ b/.env.example
@@ -48,7 +48,7 @@ VPN_INPUT_PORTS=6881
 FIREWALL_INPUT_PORTS=8080
 
 # Firewall Configuration
-FIREWALL_OUTBOUND_SUBNETS=172.19.0.0/16,192.168.1.0/24
+FIREWALL_OUTBOUND_SUBNETS=172.18.0.0/16,172.20.0.0/16,192.168.1.0/24
 
 # =============================================================================
 # SECRETS
