--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,6 @@ PGID=1000
 # Timezone (use 'timedatectl' to find your timezone)
 TZ=UTC
 
-# Network name
-NETWORK_NAME=media-network
-
 # Data paths
 MOVIES_PATH=/mnt/external/movies
 TV_PATH=/mnt/external/tv
@@ -18,18 +15,14 @@ MUSIC_PATH=/mnt/external/music
 DOWNLOADS_PATH=/mnt/external/downloads
 
 # External access (for Traefik)
-DOMAIN_SUFFIX=.lan
+# - TAILSCALE_HOST is used for admin entrypoints (Authelia-protected)
+# - PUBLIC_*_DOMAIN are used for Cloudflare/public routes
+# - SERVER_IP is used for LAN display links in the Web UI
 TAILSCALE_HOST=your-hostname.ts.net
-JELLYFIN_DOMAIN=jellyfin${DOMAIN_SUFFIX}
-JELLYSEERR_DOMAIN=jellyseerr${DOMAIN_SUFFIX}
-FILEBROWSER_DOMAIN=filebrowser${DOMAIN_SUFFIX}
-SONARR_DOMAIN=sonarr${DOMAIN_SUFFIX}
-RADARR_DOMAIN=radarr${DOMAIN_SUFFIX}
-PROWLARR_DOMAIN=prowlarr${DOMAIN_SUFFIX}
-QBITTORRENT_DOMAIN=qbittorrent${DOMAIN_SUFFIX}
 SERVER_IP=192.168.1.100
 PUBLIC_JELLYFIN_DOMAIN=jellyfin.your-domain.com
 PUBLIC_JELLYSEERR_DOMAIN=jellyseerr.your-domain.com
+PUBLIC_DASHBOARD_DOMAIN=dashboard.your-domain.com
 
 # VPN Configuration (for qBittorrent protection via Gluetun)
 VPN_PROVIDER=mullvad
@@ -48,7 +41,7 @@ VPN_INPUT_PORTS=6881
 FIREWALL_INPUT_PORTS=8080
 
 # Firewall Configuration
-FIREWALL_OUTBOUND_SUBNETS=172.18.0.0/16,172.20.0.0/16,192.168.1.0/24
+FIREWALL_OUTBOUND_SUBNETS=172.20.0.0/16,192.168.1.0/24
 
 # =============================================================================
 # SECRETS
