--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -27,7 +27,6 @@ services:
         reservations:
           memory: 128M
     networks:
-      - media-network      # Keep for backward compatibility (Iteration 1)
       - mgmt-net          # Management layer
       - frontend-net      # Scrape frontend services
       - backend-net       # Scrape backend services
@@ -73,7 +72,6 @@ services:
         reservations:
           memory: 64M
     networks:
-      - media-network      # Keep for backward compatibility (Iteration 1)
       - mgmt-net          # Management layer
       - frontend-net      # User-facing dashboard
     depends_on:
@@ -129,7 +127,6 @@ services:
         reservations:
           memory: 64M
     networks:
-      - media-network      # Keep for backward compatibility (Iteration 1)
       - mgmt-net          # Management layer
     labels:
       - "traefik.enable=true"
@@ -164,7 +161,6 @@ services:
         reservations:
           memory: 32M
     networks:
-      - media-network      # Keep for backward compatibility (Iteration 1)
       - mgmt-net          # Management layer
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://127.0.0.1:9100/"]
@@ -198,7 +194,6 @@ services:
         reservations:
           memory: 32M
     networks:
-      - media-network      # Keep for backward compatibility (Iteration 1)
       - mgmt-net          # Management layer
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:9093/"]
@@ -236,7 +231,7 @@ services:
     networks:
       - mgmt-net          # Management layer - internal access only
     healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://127.0.0.1:3100/ready"]
+      test: ["CMD", "loki", "-config.file=/etc/loki/loki-config.yml", "-verify-config"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -268,7 +263,7 @@ services:
     depends_on:
       - loki
     healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://127.0.0.1:9080/ready"]
+      test: ["CMD", "promtail", "-config.file=/etc/promtail/promtail-config.yml", "-check-syntax"]
       interval: 30s
       timeout: 10s
       retries: 3
