--- a/servarr/docker-compose.yml
+++ b/servarr/docker-compose.yml
@@ -3,7 +3,6 @@ services:
     image: linuxserver/sonarr:latest
     container_name: sonarr
     restart: unless-stopped
-    # Removed: ports - Access via Traefik at http://sonarr.lan
     volumes:
       - ./sonarr/config:/config
       - ${TV_PATH:-/mnt/external/tv}:/tv
@@ -19,8 +18,8 @@ services:
         reservations:
           memory: 256M
     networks:
-      - backend-net       # Business logic layer
-      - download-net      # Connect to qBittorrent
+      - backend-net
+      - download-net
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8989/ping"]
       interval: 30s
@@ -40,7 +39,6 @@ services:
     image: linuxserver/radarr:latest
     container_name: radarr
     restart: unless-stopped
-    # Removed: ports - Access via Traefik at http://radarr.lan
     volumes:
       - ./radarr/config:/config
       - ${MOVIES_PATH:-/mnt/external/movies}:/movies
@@ -56,8 +54,8 @@ services:
         reservations:
           memory: 128M
     networks:
-      - backend-net       # Business logic layer
-      - download-net      # Connect to qBittorrent
+      - backend-net
+      - download-net
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:7878/ping"]
       interval: 30s
@@ -77,7 +75,6 @@ services:
     image: linuxserver/prowlarr:latest
     container_name: prowlarr
     restart: unless-stopped
-    # Removed: ports - Access via Traefik at http://prowlarr.lan
     volumes:
       - ./prowlarr/config:/config
     environment:
@@ -91,8 +88,8 @@ services:
         reservations:
           memory: 64M
     networks:
-      - backend-net       # Business logic layer
-      - download-net      # Connect to qBittorrent
+      - backend-net
+      - download-net
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9696/ping"]
       interval: 30s
@@ -112,7 +109,6 @@ services:
     image: linuxserver/bazarr:latest
     container_name: bazarr
     restart: unless-stopped
-    # Removed: ports - Access via Traefik at http://bazarr.lan
     volumes:
       - ./bazarr/config:/config
       - ${MOVIES_PATH:-/mnt/external/movies}:/movies
@@ -128,7 +124,7 @@ services:
         reservations:
           memory: 128M
     networks:
-      - backend-net       # Business logic layer
+      - backend-net
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:6767/ping"]
       interval: 30s
