--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     volumes:
       - ./gluetun:/gluetun
     networks:
-      - download-net      # Isolated download network
+      - download-net
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://127.0.0.1:9999"]
       interval: 60s
