--- a/jellyseerr/docker-compose.yml
+++ b/jellyseerr/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     labels:
       - "autoheal=true"
       - "traefik.enable=true"
-      - "traefik.http.routers.jellyseerr-public.rule=Host(`${PUBLIC_JELLYSEERR_DOMAIN:-jellyseerr.otterammo.xyz}`) || Host(`${JELLYSEERR_DOMAIN:-jellyseerr.lan}`)"
+      - "traefik.http.routers.jellyseerr-public.rule=Host(`${PUBLIC_JELLYSEERR_DOMAIN:-jellyseerr.otterammo.xyz}`)"
       - "traefik.http.routers.jellyseerr-public.entrypoints=web"
       - "traefik.http.routers.jellyseerr-public.service=jellyseerr"
       - "traefik.http.routers.jellyseerr.rule=Host(`${TAILSCALE_HOST}`)"
