feat(architecture): segmented network architecture with Authelia SSO, secrets management, and enhanced monitoring (#1)
* style: reorder services from main compose

* chore(traefik): updated to v3.6.6 and added Docker API version

* docs(vpn): added auto-healing documentation and container setup

* docs: added network and architecture documentation

* feat(arch): completed iteration 01 network foundation with segmented docker networks

* feat: add SERVER_IP to .env.template

* iter2

* .lan

* fix: local/public service url logic in web-ui

* self signed certs

* Revert "self signed certs"

This reverts commit e2a3365fffa5016836c3984a6ff922be2c0ba9ce.

* tailscale

* authelia

* secrets management

* monitoring

* hardening

* remove branch backups

* WIREGUARD_PRIVATE_KEY_FILE

* refactor(networks): converted external networks to managed bridge networks with custom subnets

* fix(config): updated downloads path to include subdirectory

* chore(monitoring): updated Grafana to use secrets file for admin password

* refactor(secrets): standardized secret file naming conventions

* chore(monitoring): added download-net to docker compose networks

* chore(monitoring): upgraded cadvisor to v0.49.1 and replaced privileged mode with minimal capabilities

* test(stack): added comprehensive smoke tests and test runner

* test: added Authelia and Redis health checks to smoke tests

* docs: restructured documentation and updated configuration for secrets management

* refactor(network): removed legacy media-network and simplified environment configuration

* chore(docker): removed iteration comments from compose file

* chore: removed trailing blank lines and inline comments from docker-compose files

* chore: removed .lan domain support and traefik setup script

* docs: added README files for all services

* docs: added detailed setup guides to DETAILS.md files and consolidated README files

* feat(traefik): added Prometheus metrics configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
+__pycache__/
 .env
 .github/
+backups/
 cache/
 config/
 data/
 node_modules/
+redis-data/
+
+# Secrets
+secrets/
 
 # Fail2ban
 fail2ban/fail2ban-db/
@@ -11,3 +17,6 @@ fail2ban/config/jail.local
 
 # Traefik logs
 traefik/logs/
+
+# Agent Instructions
+CLAUDE.md
