--- a/web-ui/.env.example
+++ b/web-ui/.env.example
@@ -8,62 +8,15 @@ PGID=1000
 # Timezone (use 'timedatectl' to find your timezone)
 TZ=UTC
 
-# Network name
-NETWORK_NAME=media-network
+# Public domains (Cloudflare tunnel)
+PUBLIC_JELLYFIN_DOMAIN=jellyfin.your-domain.com
+PUBLIC_JELLYSEERR_DOMAIN=jellyseerr.your-domain.com
+PUBLIC_DASHBOARD_DOMAIN=dashboard.your-domain.com
 
-# Data paths (relative to the media directory)
-MOVIES_PATH=/mnt/external/movies
-TV_PATH=/mnt/external/tv
-MUSIC_PATH=/mnt/external/music
-DOWNLOADS_PATH=/mnt/external/downloads
-
-# External access (for Traefik or other reverse proxies)
-DOMAIN_SUFFIX=.local
-PUBLIC_DASHBOARD_DOMAIN=otterammo.xyz
-
-# Service domains
-JELLYFIN_DOMAIN=jellyfin${DOMAIN_SUFFIX}
-JELLYSEERR_DOMAIN=jellyseerr${DOMAIN_SUFFIX}
-FILEBROWSER_DOMAIN=filebrowser${DOMAIN_SUFFIX}
-SONARR_DOMAIN=sonarr${DOMAIN_SUFFIX}
-RADARR_DOMAIN=radarr${DOMAIN_SUFFIX}
-PROWLARR_DOMAIN=prowlarr${DOMAIN_SUFFIX}
-QBITTORRENT_DOMAIN=qbittorrent${DOMAIN_SUFFIX}
+# Admin access
+TAILSCALE_HOST=your-hostname.ts.net
+SERVER_IP=192.168.1.100
 
 # Web UI Admin Password
 # IMPORTANT: Change this from the default!
 ADMIN_PASSWORD=admin
-
-# Cloudflare Tunnel Configuration
-# Get this token from your Cloudflare Zero Trust dashboard
-# Visit: https://one.dash.cloudflare.com/ -> Access -> Tunnels
-CLOUDFLARE_TUNNEL_TOKEN=your-cloudflare-tunnel-token-here
-
-# VPN Configuration (for qBittorrent protection via Gluetun)
-# VPN Provider and Type
-VPN_PROVIDER=mullvad
-VPN_TYPE=wireguard
-
-# Mullvad WireGuard Configuration
-# Get these from: https://mullvad.net/en/account/wireguard-config
-# Generate a key and copy the private key and address
-WIREGUARD_PRIVATE_KEY=your-wireguard-private-key-here
-WIREGUARD_ADDRESSES=10.70.253.24/32
-
-# VPN Server Selection
-# Choose a city close to you for best performance
-# Examples: Chicago, Los Angeles, London, Tokyo
-VPN_SERVER_CITIES=Dallas TX
-
-# Port Forwarding (optional, improves seeding)
-# Request a port from Mullvad account, then set it here
-VPN_INPUT_PORTS=6881
-
-# Firewall Configuration
-# Docker network subnet (check with: docker network inspect media-network)
-# and your local LAN subnet
-FIREWALL_OUTBOUND_SUBNETS=172.19.0.0/16,192.168.1.0/24
-
-# Monitoring
-# Grafana admin password
-GRAFANA_PASSWORD=admin
