--- a/dozzle/docker-compose.yml
+++ b/dozzle/docker-compose.yml
@@ -4,9 +4,7 @@ services:
     container_name: dozzle
     restart: unless-stopped
     networks:
-      - ${NETWORK_NAME:-media-network}
-    ports:
-      - "9999:8080"
+      - mgmt-net
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
@@ -14,14 +12,23 @@ services:
       - DOZZLE_TAILSIZE=300
       - DOZZLE_FILTER=status=running
       - DOZZLE_NO_ANALYTICS=true
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.dozzle.rule=Host(`dozzle${DOMAIN_SUFFIX:-.local}`)"
-      - "traefik.http.routers.dozzle.entrypoints=web"
-      - "traefik.http.services.dozzle.loadbalancer.server.port=8080"
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 64M
     healthcheck:
       test: ["CMD", "/dozzle", "healthcheck"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 10s
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=mgmt-net"
+      - "traefik.http.routers.dozzle.rule=Host(`${TAILSCALE_HOST}`)"
+      - "traefik.http.routers.dozzle.entrypoints=dozzle"
+      - "traefik.http.routers.dozzle.tls=true"
+      - "traefik.http.routers.dozzle.middlewares=authelia@docker"
+      - "traefik.http.services.dozzle.loadbalancer.server.port=8080"
