--- a/jellyseerr/docker-compose.yml
+++ b/jellyseerr/docker-compose.yml
@@ -3,8 +3,6 @@ services:
     image: fallenbagel/jellyseerr:latest
     container_name: jellyseerr
     restart: unless-stopped
-    ports:
-      - "5055:5055"
     volumes:
       - ./config:/app/config
     environment:
@@ -18,7 +16,8 @@ services:
         reservations:
           memory: 128M
     networks:
-      - media-network
+      - frontend-net
+      - backend-net
     depends_on:
       - jellyfin
     healthcheck:
@@ -28,7 +27,13 @@ services:
       retries: 3
       start_period: 40s
     labels:
+      - "autoheal=true"
       - "traefik.enable=true"
-      - "traefik.http.routers.jellyseerr.rule=Host(`${JELLYSEERR_DOMAIN:-jellyseerr.local}`)"
-      - "traefik.http.routers.jellyseerr.entrypoints=web"
+      - "traefik.http.routers.jellyseerr-public.rule=Host(`${PUBLIC_JELLYSEERR_DOMAIN:-jellyseerr.otterammo.xyz}`)"
+      - "traefik.http.routers.jellyseerr-public.entrypoints=web"
+      - "traefik.http.routers.jellyseerr-public.service=jellyseerr"
+      - "traefik.http.routers.jellyseerr.rule=Host(`${TAILSCALE_HOST}`)"
+      - "traefik.http.routers.jellyseerr.entrypoints=jellyseerr"
+      - "traefik.http.routers.jellyseerr.tls=true"
+      - "traefik.http.routers.jellyseerr.middlewares=authelia@docker"
       - "traefik.http.services.jellyseerr.loadbalancer.server.port=5055"
