--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -9,12 +9,13 @@ services:
     volumes:
       - ./qbittorrent/config:/config
       - ${DOWNLOADS_PATH:-/mnt/external/downloads}:/downloads
+      - ${DOWNLOADS_PATH:-/mnt/external/downloads}/incomplete:/incomplete
     environment:
-      - PUID=${PUID:-1000}
+      - DOCKER_MODS=ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest
       - PGID=${PGID:-1000}
+      - PUID=${PUID:-1000}
       - TZ=${TZ:-UTC}
       - WEBUI_PORT=8080
-      - DOCKER_MODS=ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest
     deploy:
       resources:
         limits:
@@ -31,26 +32,28 @@ services:
     devices:
       - /dev/net/tun:/dev/net/tun
     ports:
-      - "8080:8080"
-      - "6881:6881"
-      - "6881:6881/udp"
+      # Removed: 8080:8080 - qBittorrent WebUI via Traefik at https://${TAILSCALE_HOST}:8080
+      - "6881:6881"      # BitTorrent traffic (TCP)
+      - "6881:6881/udp"  # BitTorrent traffic (UDP)
+    secrets:
+      - wireguard_private_key
     environment:
+      - FIREWALL_INPUT_PORTS=${FIREWALL_INPUT_PORTS:-8080}
+      - FIREWALL_OUTBOUND_SUBNETS=${FIREWALL_OUTBOUND_SUBNETS:-172.20.0.0/16,192.168.1.0/24}
+      - FIREWALL_VPN_INPUT_PORTS=${VPN_INPUT_PORTS:-6881}
+      - HEALTH_TARGET_ADDRESS=1.1.1.1:443
+      - HTTPPROXY=off
+      - SERVER_CITIES=${VPN_SERVER_CITIES:-Chicago}
+      - SHADOWSOCKS=off
+      - TZ=${TZ:-UTC}
       - VPN_SERVICE_PROVIDER=${VPN_PROVIDER:-mullvad}
       - VPN_TYPE=${VPN_TYPE:-wireguard}
-      - WIREGUARD_PRIVATE_KEY=${WIREGUARD_PRIVATE_KEY}
       - WIREGUARD_ADDRESSES=${WIREGUARD_ADDRESSES}
-      - SERVER_CITIES=${VPN_SERVER_CITIES:-Chicago}
-      - FIREWALL_OUTBOUND_SUBNETS=${FIREWALL_OUTBOUND_SUBNETS:-172.18.0.0/16,192.168.1.0/24}
-      - FIREWALL_VPN_INPUT_PORTS=${VPN_INPUT_PORTS:-6881}
-      - TZ=${TZ:-UTC}
-      - HTTPPROXY=off
-      - SHADOWSOCKS=off
-      - HEALTH_VPN_DURATION_INITIAL=20s
-      - HEALTH_VPN_DURATION_ADDITION=10s
+      - WIREGUARD_PRIVATE_KEY_FILE=/run/secrets/wireguard_private_key
     volumes:
       - ./gluetun:/gluetun
     networks:
-      - media-network
+      - download-net
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://127.0.0.1:9999"]
       interval: 60s
@@ -58,7 +61,11 @@ services:
       retries: 3
       start_period: 30s
     labels:
+      - "autoheal=true"
       - "traefik.enable=true"
-      - "traefik.http.routers.qbittorrent.rule=Host(`${QBITTORRENT_DOMAIN:-qbittorrent.local}`)"
-      - "traefik.http.routers.qbittorrent.entrypoints=web"
+      - "traefik.docker.network=download-net"
+      - "traefik.http.routers.qbittorrent.rule=Host(`${TAILSCALE_HOST}`)"
+      - "traefik.http.routers.qbittorrent.entrypoints=qbittorrent"
+      - "traefik.http.routers.qbittorrent.tls=true"
+      - "traefik.http.routers.qbittorrent.middlewares=authelia@docker"
       - "traefik.http.services.qbittorrent.loadbalancer.server.port=8080"
