--- a/web-ui/docker-compose.yml
+++ b/web-ui/docker-compose.yml
@@ -3,35 +3,43 @@ services:
     build: .
     container_name: media-web-ui
     restart: unless-stopped
-    ports:
-      - "3000:3000"
+    user: "1000:1000"
     networks:
-      - media-network
+      - frontend-net
+      - backend-net
+      - download-net
+      - mgmt-net
+    secrets:
+      - webui_admin_password
     environment:
       - TZ=${TZ:-UTC}
-      - DOMAIN_SUFFIX=${DOMAIN_SUFFIX:-.local}
+      - PUBLIC_JELLYFIN_DOMAIN=${PUBLIC_JELLYFIN_DOMAIN:-jellyfin.otterammo.xyz}
+      - PUBLIC_JELLYSEERR_DOMAIN=${PUBLIC_JELLYSEERR_DOMAIN:-jellyseerr.otterammo.xyz}
       - PUBLIC_DASHBOARD_DOMAIN=${PUBLIC_DASHBOARD_DOMAIN:-otterammo.xyz}
+      - TAILSCALE_HOST=${TAILSCALE_HOST}
       - SERVER_IP=${SERVER_IP:-192.168.86.111}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
-    labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=media-network"
-      
-      # Public site routing (primary domain)
-      - "traefik.http.routers.web-ui-public.rule=Host(`${PUBLIC_DASHBOARD_DOMAIN:-otterammo.xyz}`)"
-      - "traefik.http.routers.web-ui-public.entrypoints=web"
-      - "traefik.http.routers.web-ui-public.service=web-ui"
-      
-      # Admin site routing (local domain)
-      - "traefik.http.routers.web-ui-admin.rule=Host(`dashboard${DOMAIN_SUFFIX:-.local}`)"
-      - "traefik.http.routers.web-ui-admin.entrypoints=web"
-      - "traefik.http.routers.web-ui-admin.service=web-ui"
-      
-      # Service definition
-      - "traefik.http.services.web-ui.loadbalancer.server.port=3000"
+      - ADMIN_PASSWORD_FILE=/run/secrets/webui_admin_password
+      - NODE_OPTIONS=--dns-result-order=ipv4first
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 64M
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:3000"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 30s
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=frontend-net"
+      - "traefik.http.routers.web-ui-public.rule=Host(`${PUBLIC_DASHBOARD_DOMAIN:-otterammo.xyz}`)"
+      - "traefik.http.routers.web-ui-public.entrypoints=web"
+      - "traefik.http.routers.web-ui-public.service=web-ui"
+      - "traefik.http.routers.web-ui.rule=Host(`${TAILSCALE_HOST}`)"
+      - "traefik.http.routers.web-ui.entrypoints=web-ui"
+      - "traefik.http.routers.web-ui.tls=true"
+      - "traefik.http.routers.web-ui.middlewares=authelia@docker"
+      - "traefik.http.services.web-ui.loadbalancer.server.port=3000"
