chore(jellyseerr): added dmz-net to docker-compose services

--- a/jellyseerr/docker-compose.yml
+++ b/jellyseerr/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     networks:
       - frontend-net
       - backend-net
+      - dmz-net
     depends_on:
       - jellyfin
     healthcheck:
